# opencode-nvidia

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  README_SECURITY_SUMMARY.md  SECURITY.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py  requirements.txt
configs/: triton-config.pbtxt
docs/: TESTING_ARCHITECTURE.md  USER_FAILPOINTS.md  model-optimization.md  triton-setup.md
plugins/vscode/: package.json
plugins/vscode/src/: extension.ts
scripts/: convert_model.sh  verify_security.py
tests/: conftest.py  load_test.py  requirements-test.txt  test_suite.py
