[tool.poetry]
name = "opencode-nvidia"
version = "0.1.0"
description = "OpenCode System with NVIDIA Models"
authors = ["Scott Mill <scottmill306@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104"
uvicorn = {extras = ["standard"], version = "^0.24"}
httpx = "^0.25"
pydantic = "^2.5"
python-multipart = "^0.0.6"
numpy = "^1.26"
aiofiles = "^23.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
black = "^23.11"
ruff = "^0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true